[tool.poetry]
name = "clickable-igloo"
version = "0.1.0"
description = ""
authors = ["Laurent Almeras <laurent.almeras@kobalt.fr>"]
packages = [ { include = "clickable_igloo" } ]

[tool.poetry.dependencies]
clickable = { git = "https://github.com/lalmeras/clickable.git", branch = "master" }
clickable_ansible = { git = "https://github.com/lalmeras/clickable_ansible.git", branch = "ft-extra-args" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


